tell github to exclude .dot files from stats

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,6 @@
 *.def linguist-language=modula-2
 *.bat linguist-vendored
 *.com linguist-vendored
+*.dot linguist-vendored
 *.sh linguist-vendored
 *.txt linguist-vendored
